<resources>
    <string name="app_name">MobiDelivery</string>
    <string name="send">Отправить</string>
    <string name="registration_of_a_new_employee">Регистрация нового сотрудника</string>
    <string name="device_id">Device ID:</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="birthdate">Дата рождения (ДД.ММ.ГГГГ)</string>
    <string name="phone_number">Номер телефона (+************)</string>
    <string name="address">Адрес</string>
    <string name="complete_registration">Завершить регистрацию</string>
    <string name="begin_work">Начать работу</string>
    <string name="сomplete_work">Завершить работу</string>
    <string name="update_list_orders">Обновить список заказов</string>
    <string name="product">Товар: </string>
    <string name="quantity">Количество: </string>
    <string name="cost">Стоимость: </string>
    <string name="customer_name">Имя клиента: </string>
    <string name="customer_address">Адрес: </string>
    <string name="delivery_date">Дата доставки: </string>
    <string name="delivery_time">Время: </string>
    <string name="order_number">№ заказа</string>
    <string name="status_of_selected_order">Статус выбранного заказа:</string>
</resources>
